# persona

./: .gitignore  PLUGIN_SYSTEM.md  README.md  package-lock.json  package.json  vite.config.ts
calculator-plugin/: Cargo.toml
calculator-plugin/src/: lib.rs
file-plugin/: Cargo.toml  fs-adapter.js
file-plugin/src/: lib.rs
file-reader-plugin/: Cargo.toml
file-reader-plugin/src/: lib.rs
scheduler-plugin/: Cargo.toml
scheduler-plugin/src/: lib.rs
src/: wasm.d.ts
src/lib/: identity.ts
src/routes/: +page.server.ts  +page.svelte
src/routes/api/filesystem/: +server.ts
src/routes/api/systeminfo/: +server.ts
src/routes/client/: +page.svelte
src/types/: simple-peer.d.ts  svelte-qr.d.ts
static/plugins/CALCULATOR_PLUGIN/: calculator_plugin.d.ts  calculator_plugin.js  calculator_plugin_bg.wasm  calculator_plugin_bg.wasm.d.ts  package.json
static/plugins/FILE_PLUGIN/: file_plugin.d.ts  file_plugin.js  file_plugin_bg.wasm  file_plugin_bg.wasm.d.ts  package.json
static/plugins/FILE_PLUGIN/snippets/file-plugin-ad4b3e13785f6add/: fs-adapter.js
static/plugins/SCHEDULER_PLUGIN/: package.json  scheduler_plugin.d.ts  scheduler_plugin.js  scheduler_plugin_bg.wasm  scheduler_plugin_bg.wasm.d.ts
static/plugins/SYSTEM_INFO_PLUGIN/: package.json  system_info_plugin.d.ts  system_info_plugin.js  system_info_plugin_bg.wasm  system_info_plugin_bg.wasm.d.ts
system-info-plugin/: .gitignore  Cargo.toml  os-adapter.js
system-info-plugin/src/: lib.rs
